--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <title>css</title>
-    <link rel="stylesheet" type="text/css" href="style-1.css">
+    <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 
 <body>
