assets folder created

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <div class="card-wrapper">
         <header>
             <p>
-                <img src="illustration-hero.svg" alt="Order Summary" width="300" height="120"
+                <img src="assets/illustration-hero.svg" alt="Order Summary" width="300" height="120"
                     class="illustration-img" />
             </p>
             <p>
@@ -24,7 +24,7 @@
 
         <div class="annual-container">
             <div class="annual-box">
-                <img src="icon-music.svg" width="35" height="35" alt="" />
+                <img src="assets/icon-music.svg" width="35" height="35" alt="" />
                 <div>
                     <p class="annual-heading">Annual Plan</p>
                     <p>59.99/year</p>
